Added CSRF fields to forms

--- a/resources/views/auth/register.twig
+++ b/resources/views/auth/register.twig
@@ -6,6 +6,7 @@
 	<div class="card shadow-sm p-4 mx-auto mt-3 mb-5" style="max-width: 400px; width: 100%;">
 		<h1 class="h4 text-center mb-4">Welcome to Blogginit</h1>
 		<form action="/register" method="POST" class="registration-form">
+        {{csrf.fields | raw}}
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
                 <input type="text" id="name" name="name" class="form-control {{ errors.name ? 'is-invalid' : '' }}" value="{{ old.name }}" required>
